# Social_Support_App

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
apps/api/: Dockerfile
apps/ui/: Dockerfile  Home.py
infra/compose/: docker-compose.yml
infra/db/init/: 001_schema.sql
scripts/: e2e_smoke.sh
